# sock-n-cock

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: workflow.yml
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  collab.ts  operations.ts  types.ts  utils.ts
client/src/__tests__/: collab.test.ts  utils.test.ts
client/src/components/: Sidebar.tsx
docs/: ARCHITECTURE.md
server/: pyproject.toml
server/src/: collab.py  kafka.py  main.py  mongo_manager.py  operations.py  redis_manager.py
server/tests/: test_collab.py  test_kafka.py  test_operations.py
